add two parameters function